# opencli

./: .gitignore  AGENTS.md  README.md  install-termux.sh  opencli.sh  pyproject.toml  requirements.txt
src/opencli/: __init__.py  __main__.py  cli.py
src/opencli/ai/: __init__.py  client.py
src/opencli/editor/: __init__.py  editor.py
src/opencli/providers/: __init__.py
src/opencli/session/: __init__.py
src/opencli/tui/: __init__.py  app.py
src/opencli/utils/: __init__.py  config.py
src/orinne/: __init__.py  __main__.py
src/orinne/ai/: __init__.py  client.py
src/orinne/session/: __init__.py
src/orinne/tools/: __init__.py
src/orinne/tui/: __init__.py  app.py
src/orinne/utils/: __init__.py  config.py  permissions.py
